<resources>
    <string name="app_name">Boundless</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="gpa_catcher">GPA Catcher</string>
    <string name="pixel">Pixel</string>
    <string name="rotate_tile">Rotate Tile</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="game_over_button">Check your answer!</string>
    <string name="choose_music">Choose your music:</string>
    <string name="choose_background">Choose your background:</string>
    <string name="music_1">Music 1</string>
    <string name="music_2">Music 2</string>
    <string name="music_3">Music 3</string>
    <string name="background_1">Background 1</string>
    <string name="background_2">Background 2</string>
    <string name="background_3">Background 3</string>
    <string name="customization">Customization</string>
    <string name="stats">Statistics</string>
    <string name="back_to_menu">&lt;-</string>
    <string name="halloween">If you dare...</string>
    <string name="halloween_theme">The Button of Spooks!</string>
    <string name="turn_off_theme">Or...</string>
    <string name="turn_off">Return back to normal</string>
    <string name="game_over">Game over!</string>



</resources>
