<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="CustomizationActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="60dp"
        android:onClick="backToMenu"
        android:text="@string/back_to_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_music"/>

        <LinearLayout
            android:id="@+id/musicChooser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/music_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setMusic"
                android:text="@string/music_1" />

            <Button
                android:id="@+id/music_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setMusic"
                android:text="@string/music_2" />

            <Button
                android:id="@+id/music_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="setMusic"
                android:text="@string/music_3" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_background"/>

        <LinearLayout
            android:id="@+id/backgroundChooser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/background_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setBackground"
                android:text="@string/background_2"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/background_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setBackground"
                android:text="@string/background_1"
                android:layout_weight="1" />

            <Button
                android:id="@+id/background_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setBackground"
                android:text="@string/background_3"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>